# Agentic_Codegen

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/specs/: swap_dict.json
src/agentic_codegen/: __main__.py  actions.py  agent.py  cli.py  llm_openai.py  parsing.py  prompts.py
tests/: test_actions_checks.py  test_end_to_end.py  test_parsing.py
